[tool.poetry]
name = "bike_stations"
version = "0.1.0"
description = ""
authors = ["david-fortini <fortini.david@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
flake8 = "^3.7.9"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
